--- a/game_tfe/CMakeLists.txt
+++ b/game_tfe/CMakeLists.txt
@@ -5,4 +5,4 @@ add_executable(game_tfe ${SRC} ${INCLUDE_FILES})
 
 set_property(TARGET game_tfe PROPERTY CXX_STANDARD 20)
 
-target_link_libraries(game_tfe PRIVATE linalg geometry)
+target_link_libraries(game_tfe PRIVATE linalg geometry glfw)
