Program Game class added. Window is shown. Structure for input interception

--- a/game_tfe/CMakeLists.txt
+++ b/game_tfe/CMakeLists.txt
@@ -1,10 +1,11 @@
 SET(INCLUDE_FILES include/game_tfe/game_2048.h)
-SET(SRC src/main.cpp src/game_2048.cpp)
+
+SET(SRC src/main.cpp src/game_2048.cpp glad/src/glad.c)
 
 add_executable(game_tfe ${SRC} ${INCLUDE_FILES})
 
 set_property(TARGET game_tfe PROPERTY CXX_STANDARD 20)
 
-target_link_libraries(game_tfe PRIVATE linalg geometry glfw)
+target_link_libraries(game_tfe PRIVATE linalg geometry glfw GL)
 
-TARGET_INCLUDE_DIRECTORIES(game_tfe PRIVATE include)
+TARGET_INCLUDE_DIRECTORIES(game_tfe PRIVATE include glad/include)
