--- a/game_tfe/CMakeLists.txt
+++ b/game_tfe/CMakeLists.txt
@@ -1,6 +1,6 @@
-SET(INCLUDE_FILES include/game_tfe/game_2048.h)
+SET(INCLUDE_FILES include/game_tfe/game_2048.h include/game_tfe/gl_program.h include/game_tfe/gl_shader.h include/game_tfe/gl_buffer.h)
 
-SET(SRC src/main.cpp src/game_2048.cpp glad/src/glad.c)
+SET(SRC src/main.cpp src/game_2048.cpp glad/src/glad.c src/gl_program.cpp src/gl_shader.cpp src/gl_buffer.cpp)
 
 add_executable(game_tfe ${SRC} ${INCLUDE_FILES})
 
