game_tfe now builds on windows

--- a/game_tfe/CMakeLists.txt
+++ b/game_tfe/CMakeLists.txt
@@ -6,6 +6,8 @@ add_executable(game_tfe ${SRC} ${INCLUDE_FILES})
 
 set_property(TARGET game_tfe PROPERTY CXX_STANDARD 20)
 
-target_link_libraries(game_tfe PRIVATE linalg geometry glfw freetype GL)
+find_package(OpenGL REQUIRED)
+
+target_link_libraries(game_tfe PRIVATE linalg geometry glfw freetype ${OPENGL_gl_LIBRARY})
 
 TARGET_INCLUDE_DIRECTORIES(game_tfe PRIVATE include glad/include)
