--- a/game_project_a/CMakeLists.txt
+++ b/game_project_a/CMakeLists.txt
@@ -1,10 +1,10 @@
 set(SRC_MAIN src/main.cpp)
-set(SRC src/game.cpp)
-set(INCLUDE_FILES include/game_project_a/game.h include/game_project_a/logger.h)
+set(SRC src/game.cpp glad/src/glad.c)
+set(INCLUDE_FILES include/game_project_a/game.h include/game_project_a/logger.h )
 
 add_executable(game_project_a ${SRC_MAIN} ${SRC} ${INCLUDE_FILES})
 
-TARGET_INCLUDE_DIRECTORIES(game_project_a PUBLIC include)
+TARGET_INCLUDE_DIRECTORIES(game_project_a PUBLIC include glad/include)
 
 SET_PROPERTY(TARGET game_project_a PROPERTY CXX_STANDARD 20)
 
